--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,12 @@
 language: php
 
-php:
-  - 5.3
+build_image: drydock/u12phppls:tip
+
+php: 
+  - 5.4
+  - 5.5
+  - 5.6
+  - '7.0'
   
 before_script:
   - mkdir -p shippable/codecoverage
